[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watch-fireworks-together"
version = "0.1.0"
description = "一个实时烟花观看与弹幕交流的Web应用"
authors = [{name = "qiangzwz", email = "123@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.7"  # 锁定 3.7
dependencies = [
    "fastapi",
]
